@@ -1,3 +1,12 @@
+2005-06-18  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/goption.h: 
+	* glib/goption.c: Add G_OPTION_FLAG_NO_ARG and
+	G_OPTION_FLAG_FILENAME to allow greater control of
+	G_OPTION_ARG_CALLBACK options. (#302632, Dan Winship)
+
+	* tests/option-test.c: test callback args
+
 2005-06-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.
